--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -16,7 +16,7 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name" msgid="963247385700831716">"Диспетчер пам’яті"</string>
+    <string name="app_name" msgid="963247385700831716">"Менеджер сховища"</string>
     <string name="cancel" msgid="7021218262867558825">"Скасувати"</string>
     <string name="storage_menu_free" msgid="1878247401436882778">"Звільнити місце"</string>
     <string name="deletion_helper_title" msgid="3526170325226275927">"Видалити файли"</string>
