--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -39,7 +39,7 @@
     <string name="deletion_helper_clear_dialog_message" msgid="5196490478187120700">"Será removido um total de <xliff:g id="CLEARABLE_BYTES">%1$s</xliff:g> de conteúdo do dispositivo."</string>
     <string name="deletion_helper_clear_dialog_remove" msgid="863575755467985516">"Libertar espaço"</string>
     <string name="deletion_helper_upsell_title" msgid="8512037674466762017">"Pretende gerir o armazenamento automaticamente?"</string>
-    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"<xliff:g id="USED">%1$s</xliff:g> agora disponíveis. Pretende permitir que o Gestor de armazenamento liberte espaço automaticamente ao remover conteúdos de cópias de segurança do dispositivo?"</string>
+    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"<xliff:g id="USED">%1$s</xliff:g> agora disponíveis. Permitir que o Gestor de armazenamento liberte espaço automaticamente ao remover conteúdos de cópias de segurança do dispositivo?"</string>
     <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"Não, obrigado"</string>
     <string name="deletion_helper_upsell_activate" msgid="7157360257760895976">"Ativar"</string>
     <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"Aplicações utilizadas raramente"</string>
@@ -63,5 +63,5 @@
     <string name="empty_state_title" msgid="4033285438176545309">"Nada a remover"</string>
     <string name="empty_state_review_items_link" msgid="8411186441239304545">"Rever itens recentes"</string>
     <string name="empty_state_summary" msgid="8439893007424243790">"Não existem ficheiros mais antigos para remover. Para libertar espaço, remova fotos, vídeos e aplicações recentes."</string>
-    <string name="app_requesting_space" msgid="857425181289960167">"A aplicação <xliff:g id="APP">%1$s</xliff:g> necessita de <xliff:g id="CLEARABLE_BYTES">%2$s</xliff:g> de espaço"</string>
+    <string name="app_requesting_space" msgid="857425181289960167">"A app <xliff:g id="APP">%1$s</xliff:g> necessita de <xliff:g id="CLEARABLE_BYTES">%2$s</xliff:g> de espaço"</string>
 </resources>
