--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -18,7 +18,7 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name" msgid="963247385700831716">"Upravitelj pohrane"</string>
     <string name="cancel" msgid="7021218262867558825">"Otkaži"</string>
-    <string name="storage_menu_free" msgid="1878247401436882778">"Oslobodi prostor"</string>
+    <string name="storage_menu_free" msgid="1878247401436882778">"Oslobodite prostor"</string>
     <string name="deletion_helper_title" msgid="3526170325226275927">"Uklonite stavke"</string>
     <string name="deletion_helper_app_summary" msgid="4904590040180275237">"Prije <xliff:g id="DAYS">%1$d</xliff:g> dan(a)"</string>
     <!-- no translation found for deletion_helper_app_summary_item_size (3770886184921427886) -->
