--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -42,7 +42,7 @@
     <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"<xliff:g id="USED">%1$s</xliff:g> agora disponíveis. Permitir que o Gestor de armazenamento liberte espaço automaticamente ao remover conteúdos de cópias de segurança do dispositivo?"</string>
     <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"Não, obrigado"</string>
     <string name="deletion_helper_upsell_activate" msgid="7157360257760895976">"Ativar"</string>
-    <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"Aplicações utilizadas raramente"</string>
+    <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"Apps utilizadas raramente"</string>
     <!-- no translation found for deletion_helper_apps_group_summary (360315517252452356) -->
     <skip />
     <string name="deletion_helper_automatic_title" msgid="4610119358490679299">"Automáticas"</string>
