--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -56,7 +56,7 @@
     <string name="automatic_storage_manager_activate_button" msgid="6257070263061898041">"Inschakelen"</string>
     <string name="deletion_helper_photos_loading_title" msgid="2768067991066779772">"Foto\'s en video\'s waarvan een back-up is gemaakt"</string>
     <string name="deletion_helper_photos_loading_summary" msgid="8203033249458245854">"Items zoeken…"</string>
-    <string name="deletion_helper_no_threshold" msgid="6943179204098250444">"Alle items weergeven"</string>
+    <string name="deletion_helper_no_threshold" msgid="6943179204098250444">"Alle items tonen"</string>
     <string name="deletion_helper_default_threshold" msgid="8410389370069021113">"Recente items verbergen"</string>
     <string name="deletion_helper_clear_dialog_message_first_time" msgid="686530413183529901">"Er wordt <xliff:g id="CLEARABLE_BYTES">%1$s</xliff:g> aan content verwijderd van je apparaat"</string>
     <string name="automatic_storage_manager_activation_warning" msgid="7657017408180001078">"Je opslag wordt nu beheerd door de opslagbeheerder"</string>
