Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ie99de063abd0a3f26a33717072fbbc93e3cdd357

--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -17,7 +17,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name" msgid="963247385700831716">"Tallennustilan hallinta"</string>
-    <string name="cancel" msgid="7021218262867558825">"Peruuta"</string>
+    <string name="cancel" msgid="7021218262867558825">"Peru"</string>
     <string name="storage_menu_free" msgid="1878247401436882778">"Vapauta tilaa"</string>
     <string name="deletion_helper_title" msgid="3526170325226275927">"Poista kohteita"</string>
     <string name="deletion_helper_app_summary" msgid="4904590040180275237">"<xliff:g id="DAYS">%1$d</xliff:g> päivää sitten"</string>
