--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -20,7 +20,7 @@
     <string name="cancel" msgid="7021218262867558825">"Batal"</string>
     <string name="storage_menu_free" msgid="1878247401436882778">"Kosongkan ruang"</string>
     <string name="deletion_helper_title" msgid="3526170325226275927">"Hapus item"</string>
-    <string name="deletion_helper_app_summary" msgid="4904590040180275237">"<xliff:g id="DAYS">%1$d</xliff:g> hari yang lalu"</string>
+    <string name="deletion_helper_app_summary" msgid="4904590040180275237">"<xliff:g id="DAYS">%1$d</xliff:g> hari lalu"</string>
     <!-- no translation found for deletion_helper_app_summary_item_size (3770886184921427886) -->
     <skip />
     <string name="deletion_helper_app_summary_never_used" msgid="2695210890063792461">"Tidak digunakan setahun terakhir"</string>
