Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I9d3f39d797eb71ed7b0499654477e17bf43a9383

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -27,7 +27,7 @@
     <string name="deletion_helper_app_summary_unknown_used" msgid="8576377054665785558">"وقت آخر استخدام لسعة التخزين غير مؤكَّد"</string>
     <string name="deletion_helper_free_button" msgid="1760529213407548661">"إخلاء <xliff:g id="FREEABLE">%1$s</xliff:g>"</string>
     <string name="deletion_helper_photos_title" msgid="2602723121486729972">"صور وفيديوهات تمّ حفظ نسخ احتياطية منها"</string>
-    <string name="deletion_helper_photos_age_summary" msgid="1820871709448371984">"أقدم من 30 يومًا"</string>
+    <string name="deletion_helper_photos_age_summary" msgid="1820871709448371984">"تم إنشاؤها قبل أكثر من 30 يومًا."</string>
     <!-- no translation found for deletion_helper_photos_summary (3194825464552700889) -->
     <skip />
     <string name="deletion_helper_downloads_title" msgid="8002058095019254694">"عمليات التنزيل"</string>
