--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -51,11 +51,11 @@
     <string name="automatic_storage_manager_service_label" msgid="648592272375278978">"שירות ניהול אחסון אוטומטי"</string>
     <string name="automatic_storage_manager_notification_title" product="default" msgid="8480483265300964701">"אין מספיק שטח אחסון בטלפון"</string>
     <string name="automatic_storage_manager_notification_title" product="tablet" msgid="3150907918531844467">"אין מספיק שטח אחסון בטאבלט"</string>
-    <string name="automatic_storage_manager_notification_summary" msgid="2267399886362245822">"אפשר למנהל האחסון לפנות שטח אחסון על ידי הסרה אוטומטית של תמונות וסרטונים ישנים, כששטח האחסון בטלפון מתחיל להתמלא שוב."</string>
+    <string name="automatic_storage_manager_notification_summary" msgid="2267399886362245822">"מתירים למנהל האחסון לפנות שטח אחסון על ידי הסרה אוטומטית של תמונות וסרטונים ישנים, כששטח האחסון בטלפון מתחיל להתמלא שוב."</string>
     <string name="automatic_storage_manager_cancel_button" msgid="1826365037494962803">"לא, תודה"</string>
     <string name="automatic_storage_manager_activate_button" msgid="6257070263061898041">"הפעלה"</string>
     <string name="deletion_helper_photos_loading_title" msgid="2768067991066779772">"תמונות וסרטונים שגובו"</string>
-    <string name="deletion_helper_photos_loading_summary" msgid="8203033249458245854">"מחפש פריטים…"</string>
+    <string name="deletion_helper_photos_loading_summary" msgid="8203033249458245854">"חיפוש פריטים מתבצע…"</string>
     <string name="deletion_helper_no_threshold" msgid="6943179204098250444">"הצגת כל הפריטים"</string>
     <string name="deletion_helper_default_threshold" msgid="8410389370069021113">"הסתרת פריטים אחרונים"</string>
     <string name="deletion_helper_clear_dialog_message_first_time" msgid="686530413183529901">"<xliff:g id="CLEARABLE_BYTES">%1$s</xliff:g> של תוכן יוסרו מהמכשיר"</string>
