Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ifb6250515285bd80bcec783a9176ef735ad6083e

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -27,7 +27,7 @@
     <string name="deletion_helper_app_summary_unknown_used" msgid="8576377054665785558">"وقت آخر استخدام لسعة التخزين غير مؤكَّد"</string>
     <string name="deletion_helper_free_button" msgid="1760529213407548661">"إخلاء <xliff:g id="FREEABLE">%1$s</xliff:g>"</string>
     <string name="deletion_helper_photos_title" msgid="2602723121486729972">"صور وفيديوهات تمّ حفظ نسخ احتياطية منها"</string>
-    <string name="deletion_helper_photos_age_summary" msgid="1820871709448371984">"أقدم من 30 يومًا"</string>
+    <string name="deletion_helper_photos_age_summary" msgid="1820871709448371984">"تم إنشاؤها قبل أكثر من 30 يومًا."</string>
     <!-- no translation found for deletion_helper_photos_summary (3194825464552700889) -->
     <skip />
     <string name="deletion_helper_downloads_title" msgid="8002058095019254694">"عمليات التنزيل"</string>
@@ -41,7 +41,7 @@
     <string name="deletion_helper_upsell_title" msgid="8512037674466762017">"هل تريد إدارة مساحة التخزين تلقائيًا؟"</string>
     <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"أصبح خاليًا الآن <xliff:g id="USED">%1$s</xliff:g>. هل تسمح لمدير مساحة التخزين بالتفريغ التلقائي للمساحة بإزالة المحتوى من جهازك بعد أن احتفظت بنسخة احتياطية منه؟"</string>
     <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"لا، شكرًا"</string>
-    <string name="deletion_helper_upsell_activate" msgid="7157360257760895976">"تشغيل"</string>
+    <string name="deletion_helper_upsell_activate" msgid="7157360257760895976">"تفعيل"</string>
     <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"التطبيقات المستخدمة قليلاً"</string>
     <!-- no translation found for deletion_helper_apps_group_summary (360315517252452356) -->
     <skip />
@@ -53,7 +53,7 @@
     <string name="automatic_storage_manager_notification_title" product="tablet" msgid="3150907918531844467">"أوشكت المساحة على النفاد في جهازك اللوحي"</string>
     <string name="automatic_storage_manager_notification_summary" msgid="2267399886362245822">"السماح لمدير مساحة التخزين بالتفريغ التلقائي للمساحة بإزالة الصور والفيديوهات القديمة عندما توشك مساحة التخزين في هاتفك على الامتلاء مرة أخرى."</string>
     <string name="automatic_storage_manager_cancel_button" msgid="1826365037494962803">"لا، شكرًا"</string>
-    <string name="automatic_storage_manager_activate_button" msgid="6257070263061898041">"تشغيل"</string>
+    <string name="automatic_storage_manager_activate_button" msgid="6257070263061898041">"تفعيل"</string>
     <string name="deletion_helper_photos_loading_title" msgid="2768067991066779772">"الصور والفيديوهات التي تم الاحتفاظ بنسخة احتياطية منها"</string>
     <string name="deletion_helper_photos_loading_summary" msgid="8203033249458245854">"جارٍ البحث عن…"</string>
     <string name="deletion_helper_no_threshold" msgid="6943179204098250444">"عرض كل العناصر"</string>
