--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -26,7 +26,7 @@
     <string name="deletion_helper_app_summary_never_used" msgid="2695210890063792461">"Non se utilizou no último ano"</string>
     <string name="deletion_helper_app_summary_unknown_used" msgid="8576377054665785558">"Non se sabe cando se utilizou por última vez"</string>
     <string name="deletion_helper_free_button" msgid="1760529213407548661">"Liberar <xliff:g id="FREEABLE">%1$s</xliff:g>"</string>
-    <string name="deletion_helper_photos_title" msgid="2602723121486729972">"Copias de seguranza de fotos e vídeos"</string>
+    <string name="deletion_helper_photos_title" msgid="2602723121486729972">"Fotos e vídeos con copia de seguranza"</string>
     <string name="deletion_helper_photos_age_summary" msgid="1820871709448371984">"De máis de 30 días"</string>
     <!-- no translation found for deletion_helper_photos_summary (3194825464552700889) -->
     <skip />
@@ -54,7 +54,7 @@
     <string name="automatic_storage_manager_notification_summary" msgid="2267399886362245822">"Permite que o xestor de almacenamento quite automaticamente as fotos e os vídeos antigos cando o teléfono case está cheo de novo e así liberar espazo."</string>
     <string name="automatic_storage_manager_cancel_button" msgid="1826365037494962803">"Non, grazas"</string>
     <string name="automatic_storage_manager_activate_button" msgid="6257070263061898041">"Activar"</string>
-    <string name="deletion_helper_photos_loading_title" msgid="2768067991066779772">"Copias de seguranza de fotos e vídeos"</string>
+    <string name="deletion_helper_photos_loading_title" msgid="2768067991066779772">"Fotos e vídeos con copia de seguranza"</string>
     <string name="deletion_helper_photos_loading_summary" msgid="8203033249458245854">"Buscando elementos…"</string>
     <string name="deletion_helper_no_threshold" msgid="6943179204098250444">"Mostrar todos os elementos"</string>
     <string name="deletion_helper_default_threshold" msgid="8410389370069021113">"Ocultar elementos recentes"</string>
