--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -17,7 +17,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name" msgid="963247385700831716">"Сактагычты көзөмөлдөгүч"</string>
-    <string name="cancel" msgid="7021218262867558825">"Жокко чыгаруу"</string>
+    <string name="cancel" msgid="7021218262867558825">"Жок"</string>
     <string name="storage_menu_free" msgid="1878247401436882778">"Орун бошотуу"</string>
     <string name="deletion_helper_title" msgid="3526170325226275927">"Объекттерди өчүрүү"</string>
     <string name="deletion_helper_app_summary" msgid="4904590040180275237">"<xliff:g id="DAYS">%1$d</xliff:g> күн мурун"</string>
